--- a/src/traspaso-1.html
+++ b/src/traspaso-1.html
@@ -8,6 +8,7 @@
     <title>traspaso-1.html</title>
 
     <!-- Styles -->
+    <link rel="stylesheet" href="css/turretcss.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
