reference new turrent assets

--- a/src/traspaso-1.html
+++ b/src/traspaso-1.html
@@ -5,15 +5,25 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>traspaso-1.html</title>
+    <title>Traspaso 1</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/turretcss.min.css">
+    <link rel="stylesheet" href="css/turret.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<h1>traspaso-1.html</h1>
+<main class="">
+    <div class="container">
+        <form action="">
+            <label class="control checkbox">
+                <input type="checkbox" name="checkbox">
+                <span class="control-indicator"></span>
+                <span class="control-label">...</span>
+            </label>
+        </form>
+    </div>
+</main>
 
 <!-- Custom Script -->
 <script src="js/script.js"></script>
