updated template libs css

--- a/src/traspaso-3.html
+++ b/src/traspaso-3.html
@@ -8,7 +8,7 @@
     <title>traspaso-3.html</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/turret.css">
+    <link rel="stylesheet" href="css/libs.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
