--- a/src/traspaso-1.html
+++ b/src/traspaso-1.html
@@ -150,7 +150,7 @@
                             </div>
                             <div class="section__field field">
                                 <label for="agree-date" class="input-name">Juramentado el:</label>
-                                <input id="agree-date" class="input input-xxs" type="text" value="">
+                                <input id="agree-date" class="input input-xxs" type="text" value="00/00/00">
                             </div>
                         </div>
                         <div class="col-md-4 right-column">
@@ -158,17 +158,16 @@
                         </div>
                     </div>
                 </div>
-                <!--./END section form -->
             </section>
             <!-- ./END Transfer Includes -->
 
-            <!-- Submit Section -->
-            <section class="section transfer-includes">
-
+            <!-- submit section -->
+            <section class="section submit-form">
+                <button type="submit" class="button button-grey button-xxs">Guardar</button>
             </section>
             <!-- ./END Submit -->
-
         </form>
+        <!--./END form -->
     </div>
 </main>
 <!-- ./END Main Content -->
