added datepicker icon and track las dist files

--- a/src/traspaso-1.html
+++ b/src/traspaso-1.html
@@ -148,9 +148,13 @@
                                     </label>
                                 </div>
                             </div>
+
                             <div class="section__field field">
                                 <label for="agree-date" class="input-name">Juramentado el:</label>
-                                <input id="agree-date" class="input input-xxs" type="text" value="00/00/00">
+                                <div class="input-group">
+                                    <input id="agree-date" class="input input-xxs" type="text" value="00/00/00">
+                                    <img class="calendar-icon" src="images/calendar.svg" alt="">
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-4 right-column">
