--- a/src/bootstrap.html
+++ b/src/bootstrap.html
@@ -8,7 +8,7 @@
     <title>{{fileName}}</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/turretcss.min.css">
+    <link rel="stylesheet" href="css/libs.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
