--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>TITLE</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/turret.css">
+    <link rel="stylesheet" href="css/libs.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
