added card and dealer information of transfer 3 form and removed extra comments

--- a/src/traspaso-3.html
+++ b/src/traspaso-3.html
@@ -77,9 +77,98 @@
                     </div>
 
                 </div>
-                <!--./END section form -->
             </section>
             <!-- ./END Owner Information Section -->
+
+            <!-- Dealer Information Section -->
+            <section class="section client-info">
+                <!-- section title -->
+                <div class="section__title">
+                    <h6>Información del Concesionario</h6>
+                </div>
+                <!-- section content -->
+                <div class="section__content">
+                    <div class="row display-flex align-items-stretch">
+                        <div class="col-md-6 left-column">
+                            <div class="section__field field">
+                                <label for="dealer-licence-number" class="input-name">Número Licencia:</label>
+                                <input id="dealer-licence-number" class="input input-xxs" type="text" value="SA0122">
+                            </div>
+                            <div class="section__field field">
+                                <label for="dealer-name" class="input-name">Concesionario:</label>
+                                <input id="dealer-name" class="input input-xxs" type="text" value="LEXUS">
+                            </div>
+                            <div class="section__field field">
+                                <label for="dealer-location" class="input-name">Localización:</label>
+                                <input id="dealer-location" class="input input-xxs" type="text"
+                                       value="SAN JUAN (SA0122)">
+                            </div>
+                        </div>
+                        <div class="col-md-6 right-column">
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+            <!-- ./END Dealer Information Section -->
+
+            <!-- Car Information Section -->
+            <section class="section client-info">
+                <!-- section title -->
+                <div class="section__title">
+                    <h6>Información del Vehículo</h6>
+                </div>
+                <!-- section content -->
+                <div class="section__content">
+                    <table class="car-info">
+                        <tbody>
+                        <tr>
+                            <td><strong>VIN:</strong></td>
+                            <td>KM8J33A44HU275633</td>
+                            <td><strong>Año:</strong></td>
+                            <td>2018</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Registración:</strong></td>
+                            <td>11324567</td>
+                            <td><strong>Marca:</strong></td>
+                            <td>NISSAN</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Título:</strong></td>
+                            <td>523641</td>
+                            <td><strong>Modelo:</strong></td>
+                            <td>Rogue</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Título Impreso:</strong></td>
+                            <td>13-feb.-2012</td>
+                            <td><strong>Color:</strong></td>
+                            <td>Azul</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Tablilla:</strong></td>
+                            <td>TBL002</td>
+                            <td><strong>Cilindros:</strong></td>
+                            <td>4</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Marbete:</strong></td>
+                            <td>52369871</td>
+                            <td><strong>País Procedencia:</strong></td>
+                            <td>JP</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Expiración Marbete:</strong></td>
+                            <td>13-feb.-2020</td>
+                            <td><strong></strong></td>
+                            <td></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+            <!-- ./END Car Information Section -->
 
             <!-- submit section -->
             <section class="section submit-form">
