added current owner info table

--- a/src/traspaso-3.html
+++ b/src/traspaso-3.html
@@ -81,7 +81,7 @@
             <!-- ./END Owner Information Section -->
 
             <!-- Dealer Information Section -->
-            <section class="section client-info">
+            <section class="section dealer-info">
                 <!-- section title -->
                 <div class="section__title">
                     <h6>Información del Concesionario</h6>
@@ -113,7 +113,7 @@
             <!-- ./END Dealer Information Section -->
 
             <!-- Car Information Section -->
-            <section class="section client-info">
+            <section class="section vehicle-info">
                 <!-- section title -->
                 <div class="section__title">
                     <h6>Información del Vehículo</h6>
@@ -169,6 +169,40 @@
                 </div>
             </section>
             <!-- ./END Car Information Section -->
+
+            <!-- Current Owner Information Section -->
+            <section class="section client-info">
+                <!-- section title -->
+                <div class="section__title">
+                    <h6>Información del Dueño Actual</h6>
+                </div>
+                <!-- section content -->
+                <div class="section__content">
+                    <table class="dealer-info-table">
+                        <tbody>
+                        <tr>
+                            <td><strong>Nombre:</strong></td>
+                            <td>JUAN DEL PUEBLO</td>
+                            <td><strong>Licencia:</strong></td>
+                            <td>5412563</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Teléfono:</strong></td>
+                            <td>(787) 444-5566</td>
+                            <td><strong>Estatus:</strong></td>
+                            <td>Valida</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Dirección Físico:</strong></td>
+                            <td>AVENIDA PRINCIPAL H5 SAN JUAN, PR 00595</td>
+                            <td><strong>Dirección Postal:</strong></td>
+                            <td>Dirección Postal:	AVENIDA PRINCIPAL H5 SAN JUAN, PR 00595</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+            <!-- ./END Current Owner Information Section -->
 
             <!-- submit section -->
             <section class="section submit-form">
