added transaction table info

--- a/src/traspaso-3.html
+++ b/src/traspaso-3.html
@@ -112,7 +112,7 @@
             </section>
             <!-- ./END Dealer Information Section -->
 
-            <!-- Car Information Section -->
+            <!-- Vehicle Information Section -->
             <section class="section vehicle-info">
                 <!-- section title -->
                 <div class="section__title">
@@ -168,10 +168,10 @@
                     </table>
                 </div>
             </section>
-            <!-- ./END Car Information Section -->
+            <!-- ./END Vehicle Information Section -->
 
             <!-- Current Owner Information Section -->
-            <section class="section client-info">
+            <section class="section current-owner-info">
                 <!-- section title -->
                 <div class="section__title">
                     <h6>Información del Dueño Actual</h6>
@@ -204,11 +204,75 @@
             </section>
             <!-- ./END Current Owner Information Section -->
 
-            <!-- submit section -->
-            <section class="section submit-form">
-                <button type="submit" class="button button-grey button-xxs">Guardar</button>
+            <!-- Release Conditions Section -->
+            <section class="section release-info">
+                <!-- section title -->
+                <div class="section__title">
+                    <h6>Liberación de Gravamen</h6>
+                </div>
+                <!-- section content -->
+                <div class="section__content">
+                    <table class="release-info-table">
+                        <tr>
+                            <th scope="col">Gravamen</th>
+                            <th scope="col">Institución / Acreedor</th>
+                            <th scope="col">Contrato</th>
+                            <th scope="col">Comentarios</th>
+                        </tr>
+                        <tbody>
+                        <tr>
+                            <td>Mobiliario (Venta Condicional)</td>
+                            <td>Popular Auto Inc</td>
+                            <td>4589632</td>
+                            <td>N/C</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </section>
-            <!-- ./END Submit -->
+            <!-- ./END Release Conditions Section -->
+
+            <!-- Transaction Rights Section -->
+            <section class="section transaction-rights-info">
+                <!-- section title -->
+                <div class="section__title">
+                    <h6>Liberación de Gravamen</h6>
+                </div>
+                <!-- section content -->
+                <div class="section__content">
+                    <table class="transaction-rights-table">
+                        <tr>
+                            <th scope="col">Cantidad</th>
+                            <th scope="col">Tipo Concepto</th>
+                            <th scope="col">Contrato</th>
+                            <th scope="col">Costo</th>
+                        </tr>
+                        <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>5120</td>
+                            <td>18/abr/2019 09:48 am</td>
+                            <td>$ 11.00</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>0842</td>
+                            <td>18/abr/2019 09:48 am</td>
+                            <td>$ 2.00</td>
+                        </tr>
+                        <tfoot>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td class="transaction-total">Total</td>
+                            <td>$180</td>
+                        </tr>
+                        </tfoot>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+            <!-- ./END Transaction Rights Section -->
         </form>
         <!--./END form -->
     </div>
