added find icon on transfer 3 form

--- a/src/traspaso-3.html
+++ b/src/traspaso-3.html
@@ -64,6 +64,7 @@
                             <div class="section__field field">
                                 <label for="search-board-id" class="input-name">El número de <strong>Licencia</strong>:</label>
                                 <input id="search-board-id" class="input input-xxs" type="text" value="451263">
+                                <button class="button button-xxs find-licence"></button>
                             </div>
                             <div class="section__field field align-items-flex-start">
                                 <label for="client-address" class="input-name">Dirección Física:</label>
@@ -93,6 +94,7 @@
                             <div class="section__field field">
                                 <label for="dealer-licence-number" class="input-name">Número Licencia:</label>
                                 <input id="dealer-licence-number" class="input input-xxs" type="text" value="SA0122">
+                                <button class="button button-xxs find-licence"></button>
                             </div>
                             <div class="section__field field">
                                 <label for="dealer-name" class="input-name">Concesionario:</label>
