--- a/src/traspaso-3.html
+++ b/src/traspaso-3.html
@@ -281,7 +281,7 @@
 </main>
 <!-- ./END Main Content -->
 
-<!-- Libraries Script -->
+<!-- Libraries Scripts -->
 <script src="js/libs.js"></script>
 
 <!-- Custom Script -->
