--- a/src/traspaso-1.html
+++ b/src/traspaso-1.html
@@ -153,7 +153,7 @@
                                 <label for="agree-date" class="input-name">Juramentado el:</label>
                                 <div class="input-group">
                                     <input id="agree-date" class="input input-xxs" type="text" value="00/00/00">
-                                    <img class="calendar-icon" src="images/calendar.svg" alt="">
+                                    <span class="calendar-icon"></span>
                                 </div>
                             </div>
                         </div>
