updated bootstrap and generated transfer form 3

--- a/src/traspaso-6.html
+++ b/src/traspaso-6.html
@@ -13,10 +13,59 @@
 </head>
 <body>
 
-<h1>traspaso-6.html</h1>
+<!-- Main Content -->
+<main class="pv-container">
+    <div class="container no-padding">
+        <!-- section form -->
+        <form class="form-inline" action="#">
+            <!-- traspaso-6.html Section -->
+            <section class="section transfer-via">
+                <!-- section title -->
+                <div class="section__title">
+                    <h6>traspaso-6.html title</h6>
+                </div>
+                <!-- section content -->
+                <div class="section__content">
+                    <div class="row display-flex align-items-stretch">
+                        <div class="col-md-7 left-column">
+                            <div class="section__field field">
+                                <span class="input-name">Dummy:</span>
+                                <label class="select select-xxs" for="transfer-search">
+                                    <select id="transfer-search">
+                                        <option>Seleccione</option>
+                                        <option value="1">Tablilla</option>
+                                        <option value="2">Tablilla</option>
+                                    </select>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-md-5 right-column">
+                            <div class="section__field field">
+                                <label for="board-id" class="input-name">Dummy:</label>
+                                <input id="board-id" class="input input-xxs" type="text" value="TBL002">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+            <!-- ./END traspaso-6.html Section -->
+
+            <!-- submit section -->
+            <section class="section submit-form">
+                <button type="submit" class="button button-grey button-xxs">Guardar</button>
+            </section>
+            <!-- ./END Submit -->
+        </form>
+        <!--./END form -->
+    </div>
+</main>
+<!-- ./END Main Content -->
+
+<!-- Libraries Script -->
+<script src="js/libs.js"></script>
 
 <!-- Custom Script -->
 <script src="js/script.js"></script>
 </body>
 </html>
-
