--- a/src/traspaso-3.html
+++ b/src/traspaso-3.html
@@ -180,7 +180,7 @@
                 </div>
                 <!-- section content -->
                 <div class="section__content">
-                    <table class="dealer-info-table">
+                    <table class="details-info-table">
                         <tbody>
                         <tr>
                             <td><strong>Nombre:</strong></td>
@@ -214,7 +214,7 @@
                 </div>
                 <!-- section content -->
                 <div class="section__content">
-                    <table class="release-info-table">
+                    <table class="info-table-gray">
                         <tr>
                             <th scope="col">Gravamen</th>
                             <th scope="col">Institución / Acreedor</th>
@@ -242,7 +242,7 @@
                 </div>
                 <!-- section content -->
                 <div class="section__content">
-                    <table class="transaction-rights-table">
+                    <table class="transaction-info-table">
                         <tr>
                             <th scope="col">Cantidad</th>
                             <th scope="col">Tipo Concepto</th>
