transfer form issue solved

--- a/src/traspaso-3.html
+++ b/src/traspaso-3.html
@@ -51,11 +51,15 @@
                                 <div class="section__detail-box">
                                     <div class="section__field field">
                                         <label for="birth-date" class="input-name">Fecha Nacimiento:</label>
-                                        <input id="birth-date" class="input input-xxs" type="text" value="00/00/00">
+                                        <input id="birth-date" class="input input-xxs plane-input" type="text" value="00/00/00">
                                     </div>
                                     <div class="section__field field">
                                         <label for="cd-licence-number" class="input-name">Num Licencia:</label>
-                                        <input id="cd-licence-number" class="input input-xxs" type="text" value="451263">
+                                        <input id="cd-licence-number" class="input input-xxs plane-input" type="text" value="451263">
+                                    </div>
+                                    <div class="section__field field">
+                                        <label for="client-phone" class="input-name">Teléfono:</label>
+                                        <input id="client-phone" class="input input-xxs plane-input" type="text" value="">
                                     </div>
                                 </div>
                             </div>
