transfer form 6 lest two sections

--- a/src/traspaso-3.html
+++ b/src/traspaso-3.html
@@ -51,7 +51,7 @@
                                 <div class="section__detail-box">
                                     <div class="section__field field">
                                         <label for="birth-date" class="input-name">Fecha Nacimiento:</label>
-                                        <input id="birth-date" class="input input-xxs plane-input" type="text" value="00/00/00">
+                                        <input id="birth-date" class="input input-xxs plane-input as-datepicker" type="text" value="00/00/00">
                                     </div>
                                     <div class="section__field field">
                                         <label for="cd-licence-number" class="input-name">Num Licencia:</label>
@@ -113,7 +113,6 @@
                         <div class="col-md-6 right-column">
                         </div>
                     </div>
-
                 </div>
             </section>
             <!-- ./END Dealer Information Section -->
@@ -126,7 +125,7 @@
                 </div>
                 <!-- section content -->
                 <div class="section__content">
-                    <table class="car-info">
+                    <table class="details-info-table">
                         <tbody>
                         <tr>
                             <td><strong>VIN:</strong></td>
@@ -210,7 +209,7 @@
             </section>
             <!-- ./END Current Owner Information Section -->
 
-            <!-- Release Conditions Section -->
+            <!-- Assessment Conditions Section -->
             <section class="section release-info">
                 <!-- section title -->
                 <div class="section__title">
@@ -236,7 +235,7 @@
                     </table>
                 </div>
             </section>
-            <!-- ./END Release Conditions Section -->
+            <!-- ./END Assessment Conditions Section -->
 
             <!-- Transaction Rights Section -->
             <section class="section transaction-rights-info">
@@ -266,6 +265,7 @@
                             <td>18/abr/2019 09:48 am</td>
                             <td>$ 2.00</td>
                         </tr>
+                        </tbody>
                         <tfoot>
                         <tr>
                             <td></td>
@@ -274,7 +274,6 @@
                             <td>$180</td>
                         </tr>
                         </tfoot>
-                        </tbody>
                     </table>
                 </div>
             </section>
